--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                <p>I was born and raised in NYC, but my real roots reach to South America. I owe my travel bug to being a first generation American
+                with family all over the world - we were always on the go!</p>
             </div>
             <div class="div-2">
-                Div 2
+                <p><span class="font">My Passion: </span>I <span class="capital">Love</span> music - it's one of the most powerful and diverse methods for expression & communication. In the meantime, I get a fix by going to lots and lots of concerts, I'm at 160 and counting!</p>
             </div>
             <div class="div-3">
-                Div 3
+                <p><span class="font">A fun fact: </span> As a true New Yorker, I'm slightly embarrased to say that I only learned how to ride a plain ol' stationary bike 1 year ago, and I have yet to learn to drive. But the real takeaway is that i'm learning!</p>
             </div>
         </section>    
 
