adapted flexbox div template into a simple flexbox layout

--- a/index.html
+++ b/index.html
@@ -22,16 +22,28 @@
         <![endif]-->
        
         <section class="wrapper">
+            <header>
+                <h1><span>Hi,</span> I'm Kate.</h1>
+            </header>
+            <main>
+                <p>I am a <span>Responsive Designer & Developer</span> who thrives on creating intuitve, user friendly web experiences.  When I'm not working, listening to tech blogs or getting lost in the rabbit hole of articles and books, I can be found traveling, hiking, playing tennis or searching for new experiences.</p>
+            </main>
+            <div class="line-breaker"></div>
             <div class="div-1">
-                <p>I was born and raised in NYC, but my real roots reach to South America. I owe my travel bug to being a first generation American
-                with family all over the world - we were always on the go!</p>
+                <p>I was born and raised in Queensland, Australia, but I currently live in the Silcon Valley hub of Califonia, surounded by technology giants for inspiration and motivation. Yes I still have my Australian accent, and yes we have snakes and spiders.</p>
             </div>
             <div class="div-2">
-                <p><span class="font">My Passion: </span>I <span class="capital">Love</span> music - it's one of the most powerful and diverse methods for expression & communication. In the meantime, I get a fix by going to lots and lots of concerts, I'm at 160 and counting!</p>
+                <p><span class="font">My Passion: </span>I <span class="capital">Love</span> to travel - it's one of the most rewarding and eye opening experiences, when you see and get a small taste of how different life is in other countries! Or when you get to see that iconic object or location in person, after knowing of it from movies or images.</p>
             </div>
             <div class="div-3">
-                <p><span class="font">A fun fact: </span> As a true New Yorker, I'm slightly embarrased to say that I only learned how to ride a plain ol' stationary bike 1 year ago, and I have yet to learn to drive. But the real takeaway is that i'm learning!</p>
+                <p><span class="font">A fun fact: </span> As an Australian, I spent five years living just a stones throw away from the beautful and famous Great Barrier Reef, and yes, it is just as beautiful as you imagine, I am lucky to have visited it several times</p>
             </div>
+            <div class="line-breaker"></div>
+            <footer>
+                <a href="https://github.com/PinkMoonlight" target="_blank"><img src="img/icon-github.png" alt="GitHub icon"/></a>
+                <a href="www.linkedin.com/in/kate-cherie" target="_blank"><img src ="img/icon-linkedin.png" alt="LinkedIN icon"/></a>
+                <a href="https://twitter.com/PinkMoonlight3" target="_blank"><img src="img/icon-twitter.png" alt="Twitter icon"/></a>
+            </footer>
         </section>    
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
